Fix overflow issue

--- a/src/scss/modules/_dropdown-toggle.scss
+++ b/src/scss/modules/_dropdown-toggle.scss
@@ -23,6 +23,7 @@ $border-radius: $vs-border-radius;
   border: $border-width $border-style $border-color;
   border-radius: $border-radius;
   white-space: normal;
+  justify-content: space-between;
 }
 
 .vs__selected-options {
@@ -32,6 +33,8 @@ $border-radius: $vs-border-radius;
   flex-wrap: wrap;
   padding: 0 2px;
   position: relative;
+  max-width: calc(100% - 41px);
+  overflow: hidden;
 }
 
 .vs__actions {
